<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="item"
            type="com.todolist.database.TaskEntity" />
    </data>

    <androidx.cardview.widget.CardView
        android:id="@+id/mainLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_5sdp"
        app:cardCornerRadius="@dimen/_5sdp"
        app:cardElevation="@dimen/_4sdp"
        app:cardUseCompatPadding="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_8sdp">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_bold"
                    android:gravity="center"
                    android:lines="1"
                    android:text="@{item.title}"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_15sdp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvContent"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:fontFamily="@font/roboto_regular"
                    android:text="@{item.content}"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_12sdp"
                    app:layout_constraintStart_toStartOf="@id/tvTitle"
                    app:layout_constraintTop_toBottomOf="@id/tvTitle"
                    app:layout_constraintWidth_percent="0.5" />

                <androidx.appcompat.widget.AppCompatCheckBox
                    android:id="@+id/isCompletedCheckBox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/complete"
                    app:layout_constraintBottom_toBottomOf="@id/tvTitle"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@id/tvTitle" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:fontFamily="@font/roboto_bold"
                    android:gravity="center"
                    android:lines="1"
                    android:text="@string/task_created_on"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_12sdp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/isCompletedCheckBox" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:drawablePadding="@dimen/_4sdp"
                    android:fontFamily="@font/roboto_regular"
                    android:gravity="center"
                    android:lines="1"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_12sdp"
                    app:drawableStartCompat="@drawable/ic_calender"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/text" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvTime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginTop="@dimen/_2sdp"
                    android:drawablePadding="@dimen/_4sdp"
                    android:fontFamily="@font/roboto_regular"
                    android:gravity="center"
                    android:lines="1"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_12sdp"
                    app:drawableStartCompat="@drawable/ic_clock"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tvDate" />


            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnEdit"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_30sdp"
                android:layout_below="@id/layout"
                android:layout_marginTop="@dimen/_10sdp"
                android:background="@color/blue"
                android:fontFamily="@font/roboto_medium"
                android:gravity="center"
                android:text="@string/Edit"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="@dimen/_18sdp" />

        </RelativeLayout>

    </androidx.cardview.widget.CardView>
</layout>